@@ -65,6 +65,9 @@ exports.parse = function (blockListXml) {
     blockListResult.CommittedBlocks = blockListXml.CommittedBlocks.Block;
     if (!_.isArray(blockListResult.CommittedBlocks)) {
       blockListResult.CommittedBlocks = [blockListResult.CommittedBlocks];
+      blockListResult.CommittedBlocks.forEach(function(block) {
+        block.Name = new Buffer(block.Name, 'base64').toString();
+      });
     }
   }
 
@@ -72,6 +75,9 @@ exports.parse = function (blockListXml) {
     blockListResult.UncommittedBlocks = blockListXml.UncommittedBlocks.Block;
     if (!_.isArray(blockListResult.UncommittedBlocks)) {
       blockListResult.UncommittedBlocks = [blockListResult.UncommittedBlocks];
+      blockListResult.UncommittedBlocks.forEach(function(block) {
+        block.Name = new Buffer(block.Name, 'base64').toString();
+      });
     }
   }
 
